# Phoenix-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CrashFrame  Directory.Build.props  PhxEngine.sln  PhxEngineApp.cmake  PhxEngineCore.cmake  PhxEngineRHI.cmake  PhxEngineRenderer.cmake  README.md  SceneData.txt  Setup_2022.bat  imgui.ini  todo-list.txt
Editor/: CMakeLists.txt
Editor/Src/: EditorLayer.cpp  EditorLayer.h  GuiLayer.cpp  GuiLayer.h  Main.cpp
Examples/BasicTriangle/: BasicTriangle.cpp  BasicTrianglePS.hlsl  BasicTriangleVS.hlsl  CMakeLists.txt
Examples/ClusterLighting/: CMakeLists.txt  ClusterLighting.cpp
Examples/ImGuiDemo/: BasicTrianglePS.hlsl  CMakeLists.txt  ImGuiDemo.cpp
Examples/Meshlet/: BasicTriangleAS.hlsl  BasicTriangleMS.hlsl  CMakeLists.txt  Meshlet.cpp
Examples/VisibilityBufferRendering/: CMakeLists.txt  Common.hlsli  VisibilityBufferRendering.cpp
PhxEditor/: AssetImporterGltf.cpp  AssetImporterGltf.h  CMakeLists.txt  Editor.cpp  Editor.h  EditorAssetStore.cpp  EditorAssetStore.h  Game.cpp  Game.h  GltfModelImporter.cpp  GltfModelImporter.h  Main.cpp  MicrosoftGameConfig.mgc  ModelImporter.h  PhxEditor.vcxproj  PhxEditor.vcxproj.filters  PhxEditor_SOURCE.vcxitems  PhxEditor_SOURCE.vcxitems.filters  PhxEditor_Source.vcxitems  PhxEditor_Windows.vcxproj  PhxEditor_Windows.vcxproj.filters  PhxEditor_WindowsDx12.vcxproj  PhxEditor_WindowsDx12.vcxproj.filters  d3dx12.h  imgui.ini  packages.config  pch.h  phxMeshPrefabFactory.cpp  phxMeshPrefabFactory.h
PhxEditor/Shaders/: BuildShaders.txt  TestShader.hlsl  TestShader.hlsli  TestShaderPS.hlsl  TestShaderVS.hlsl
PhxEditor/Src/: EditorLayer.cpp  EditorLayer.h  PhxEditorApp.cpp  Renderer.cpp  Renderer.h  ShaderResourceHandler.cpp  ShaderResourceHandler.h  ViewportWidget.cpp  ViewportWidget.h  Widgets.cpp  Widgets.h
PhxEngine/: BaseInclude.h  CMakeLists.txt  PhxEngine.h  PhxEngine.vcxproj  PhxEngine.vcxproj.filters  PhxEngine_SOURCE.vcxitems  PhxEngine_SOURCE.vcxitems.filters  PhxEngine_Source.vcxitems  PhxEngine_Source.vcxitems.filters  PhxEngine_WIndowsDx12.vcxproj  PhxEngine_WIndowsDx12.vcxproj.filters  PhxEngine_Windows.vcxproj  PhxEngine_Windows.vcxproj.filters  ShaderCompiler.cpp  compileshaders.cmake  packages.config  pch.h  phxApplication.h  phxAssetFile.cpp  phxAssetFile.h  phxBaseInclude.h  phxBinaryBuilder.h  phxCommandLineArgs.cpp  phxCommandLineArgs.h  phxCommandListD3D12.cpp  phxCommandListD3D12.h  phxDeferredReleaseQueue.cpp  phxDeferredReleaseQueue.h  phxDisplay.cpp  phxDisplay.h  phxEngineCore.cpp  phxEngineCore.h  phxEngineProfiler.cpp  phxEngineProfiler.h  phxEnumUtils.h  phxGfxCommonResources.h  phxGfxCore.cpp  phxGfxCore.h  phxGfxHandle.h  phxGfxHandlePool.h  (+17 more)
PhxEngine-AssetBaker/: CMakeLists.txt
PhxEngine-AssetBaker/Src/: AssetBakerApp.cpp  AssetPacker.cpp  AssetPacker.h  MeshBuilderData.h  ModelInfoBuilder.cpp  ModelInfoBuilder.h
PhxEngine-Editor/: CMakeLists.txt
PhxEngine-Editor/Src/: DeferredSceneRenderer.cpp  DeferredSceneRenderer.h  EditorApplication.cpp  EditorCameraController.cpp  EditorCameraController.h  EditorLayer.cpp  EditorLayer.h  GltfModelLoader.cpp  GltfModelLoader.h  SceneRenderLayer.cpp  SceneRenderLayer.h  StaticMeshPrefab.h  Widgets.cpp  Widgets.h
PhxEngine-ModelViewer/: CMakeLists.txt
PhxEngine-ModelViewer/Src/: ModelViewerApp.cpp
PhxEngine-Runtime/: CMakeLists.txt
PhxEngine-Runtime/Src/: RuntimeApplication.cpp
PhxEngine/Assets/: AssetStore.cpp  AssetStore.h  Assets.cpp  Assets.h
PhxEngine/Core/: Application.cpp  Application.h  BitSetAllocator.cpp  BitSetAllocator.h  Canvas.h  CommandLineArgs.cpp  CommandLineArgs.h  Containers.h  EntryPoint.h  EventDispatcher.cpp  EventDispatcher.h  Events.h  FrameProfiler.h  Log.cpp  Log.h  Math.h  Memory.cpp  NonCopyable.h  NonMoveable.h  Object.cpp  Object.h  Platform.h  Pool.h  RefCountPtr.h  Span.h  SpinLock.h  StopWatch.h  String.h  StringHash.h  TaskExecutor.h  VirtualFileSystem.cpp  VirtualFileSystem.h  Window.cpp  Window.h  WindowGlfw.cpp  WindowGlfw.h  phxBinaryBuilder.h  phxBitSetAllocator.cpp  phxBitSetAllocator.h  phxEnumArray.h  (+22 more)
PhxEngine/D3D12/: phxGfxD3D12CommandQueue.cpp  phxGfxD3D12DescriptorHeaps.cpp  phxGfxD3D12DescriptorHeaps.h  phxGfxDescriptorHeap.cpp  phxGfxDescriptorHeap.h  phxGfxDevice.cpp  phxGfxDevice.h  phxGfxPlatformCommon.h  phxGfxPlatformDevice.cpp  phxGfxPlatformDevice.h  phxGfxPlatformImpl.cpp  phxGfxPlatformImpl.h  phxGfxPlatformResources.h  phxGfxResources.h
PhxEngine/EmberGfx/: phxCommandCtxInterface.h  phxEmber.cpp  phxEmber.h  phxFontRenderer.cpp  phxFontRenderer.h  phxGfxCommandCtx.h  phxGfxCommandCtxInterface.h  phxGfxCommandCtxSelector.h  phxGfxDevice.cpp  phxGfxDevice.h  phxGfxDeviceFactory.cpp  phxGfxDeviceFactory.h  phxGfxDeviceInterface.h  phxGfxDeviceResources.h  phxGfxDeviceSelector.h  phxGpuDeviceInterface.h  phxHandlePool.h  phxImGuiRenderer.cpp  phxImGuiRenderer.h  phxShaderCompiler.h  phxShaderCompiler_DXC.cpp  phxTempMemoryAllocator.h
PhxEngine/Engine/: EngineCore.cpp  EngineCore.h  World.cpp  World.h
PhxEngine/Graphics/: RectPacker.h  RenderPathComponent.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderFactory.cpp  ShaderFactory.h  ShaderStore.cpp  ShaderStore.h  TextRenderer.cpp  TextRenderer.h  TextureCache.cpp  phxGfxCore.cpp  phxGfxCore.h  phxGfxDescriptors.h  phxGfxDeviceNotify.h  phxGfxEnums.h
PhxEngine/RHI/: DeferedReleaseQueue.cpp  DeferedReleaseQueue.h  IDeviceNotify.h  PhxRHI.cpp  PhxRHI.h  PhxRHIDescriptors.h  PhxRHIEnums.h  PhxShaderCompiler.h  RHIDefinitions.h  RHIEnums.h  RHIResources.h  ResourceOwner.h  (+1 more)
Shaders/: CMakeLists.txt  DeferredLightingCS.cso  DeferredLightingPS.cso  DeferredLightingVS.cso  DeferredLighting_RTShadowsPS.cso  EnvMap_SkyVS.cso  EnvMap_Sky_ProceduralPS.cso  FilterEnvMapCS.cso  FullScreenQuadPS.cso  FullScreenQuadVS.cso  GBufferPassPS.cso  GBufferPassVS.cso  GenerateMipChain_CubeArrayCS.cso  ImGuiPS.cso  ImGuiVS.cso  ShadowPassVS.cso  SkyVS.cso  Sky_ProceduralPS.cso  Sky_TexturePS.cso  ToneMappingPS.cso  ToneMappingVS.cso  VertexColourPS.cso  VertexColourVS.cso
TestBedApp/: CMakeLists.txt
(+1079 files in other folders)
